# recursive_graph_bisection

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  avx_mathfun.h  main.cpp  recursive_graph_bisection.hpp  util.hpp
include/rgb/: binary_collection.hpp  binary_freq_collection.hpp  forward_index.hpp  rgb.hpp  util.hpp  varint.hpp
src/: CMakeLists.txt  rgb.cpp
test/: CMakeLists.txt  test_rgb.cpp
